# untitled-4b

./: Cargo.toml  README.MD
DONT_OPEN/pc/: .shell.rhai
DONT_OPEN/pc/documents/: rhai.manual
DONT_OPEN/pc/programs/: cat.rhai  edit.rhai  help.rhai  ls.rhai
src/: main.rs
src/engine/: mod.rs
