[package]
name = "untitled-4b"
version = "0.1.0"
authors = ["= <hjalte.nannestad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { git = "https://github.com/rhaiscript/rhai", features = ["sync"] }
open = "1.4.0"
crossterm = "0.19.0"
device_query = "0.2.7"